--- a/templates/specification.html
+++ b/templates/specification.html
@@ -57,8 +57,8 @@
 			editors: [
 			{% for editor in editors %}
 				{
-					name: {{editor.0}},
-					url: {{editor.1}},
+					name: "{{editor.0}}",
+					url: "{{editor.1}}",
 				},
 			{% endfor %}
 			],
@@ -70,9 +70,7 @@
 </head>
 
 <body>
-	<section id="abstract">
-    {{description}}
-	</section>
+	<section id="abstract">{{description}}</section>
   
   {{content}}
 
